[gd_scene load_steps=6 format=3 uid="uid://1ibacw41nlvo"]

[ext_resource type="Script" path="res://scenes/knight_aura.gd" id="1_vrt7i"]
[ext_resource type="PackedScene" uid="uid://cuifh3hsptjs2" path="res://scenes/Common/hitbox_component.tscn" id="1_wvfcy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_iwjeh"]
radius = 54.231

[sub_resource type="Gradient" id="Gradient_ip2tr"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rsiwx"]
gradient = SubResource("Gradient_ip2tr")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.6, 0)

[node name="KnightAura" type="Node2D"]
visible = false
script = ExtResource("1_vrt7i")

[node name="HitboxComponent" parent="." instance=ExtResource("1_wvfcy")]
collision_layer = 2
collision_mask = 4
damage = 10.0

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_iwjeh")

[node name="Aura" type="PointLight2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(1.46875, 1.46875)
color = Color(1, 0.768627, 0.352941, 1)
energy = 2.0
texture = SubResource("GradientTexture2D_rsiwx")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Duration" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]

[editable path="HitboxComponent"]
